using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorParameter : MonoBehaviour
{
    public const string ForwardSpeed = "ForwardSpeed";
    public const string TimeoutToIdle = "TimeoutToIdle";
    public const string QuickTurn180 = "QuickTurn180";


    public const string Punch1 = "Punch1";
    public const string Punch2 = "Punch2";
    public const string Punch3 = "Punch3";

    public const string Kick1 = "Kick1";
    public const string Kick2 = "Kick2";
    public const string Kick3 = "Kick3";

    public const string Vault = "Vault";
    public const string Dodge = "Dodge";
    public const string DodgeSpeed = "DodgeSpeed";
    public const string Jump  = "Jump";
    public const string IsFalling = "IsFalling";

    public const string LeftFootWeight = "LeftFootWeight";
    public const string RightFootWeight = "RightFootWeight";
}
